new example tests: loadbalancer-{static,basic1,client2}